02-Persistence-and-Advanced-Workload-Management/demos/m1-configmap-and-secrets/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: cm-and-secret-demo
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
