02-Persistence-and-Advanced-Workload-Management/demos/m1-configmap-and-secrets/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: globomantics-website
  namespace: cm-and-secret-demo
spec:
  selector:
    app: globomantics-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: web
  type: ClusterIP
