02-Persistence-and-Advanced-Workload-Management/demos/m1-configmap-and-secrets/route-web.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: globomantics-website
  namespace: cm-and-secret-demo
spec:
  to:
    kind: Service
    name: globomantics-website
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
